--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NEXTAUTH_URL=https://todo-mkz1pc8h6-vlad-guzun.vercel.app
 GOOGLE_CLIENT_ID=670415678821-j5atni0c15131p1ckum3ukoh2kkm8bsn.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 
