--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 GOOGLE_CLIENT_ID=670415678821-src0abnq2gktbpdopuptucheljdjg3ou.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+NEXTAUTH_SECRET=random
 
 GITHUB_CLIENT_SECRET=7d9e6d79505851c397f30c20615f2b4ad0ffd55d
 GITHUB_CLIENT_ID=98eaccf8d32d8ddeea51
